--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,46 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI - Run Unit Test
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "NO1" branch
   push:
     branches: [ "NO1" ]
   pull_request:
     branches: [ "NO1" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on 
-    # Ban đầu ngta ghi là ubuntu-latest
-    # Tuy nhiên, ở đây ta sử dụng ma trận để xác định hai hệ điều hành khác nhau
-    #(ubuntu-latest và windows-latest), nơi mà unit test sẽ được chạy.
     runs-on:  ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Check out Repository
         uses: actions/checkout@v4
-          
-     # Thêm vào nè
+
+      - name: Set up Python Environment
+        run: |
+          echo "pythonLocation=/opt/hostedtoolcache/Python/3.8.18/x64" >> $GITHUB_ENV
+          echo "/opt/hostedtoolcache/Python/3.8.18/x64/bin" >> $GITHUB_PATH
+
+      - name: Enable Unsecure Commands
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+        run: |
+          export pythonLocation=/opt/hostedtoolcache/Python/3.8.18/x64
+          export PATH=$pythonLocation/bin:$PATH
+
       - name: Set up Python
         uses: actions/setup-python@v2.1.0
         with:
           python-version: 3.8
+
+      - name: Run My Step
+        id: myStep
+        run: echo "::set-output name=myOutput::some value"
+
+      - name: Set Output Variable
+        run: echo "myOutput=${{ steps.myStep.outputs.myOutput }}" >> $GITHUB_ENV
 
       - name: Install Dependencies
         run: |
